Improve misc. things